<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/F1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  F1  \n unkonwn " />

        <TextView
            android:id="@+id/F2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  F2  \n unkonwn " />

        <TextView
            android:id="@+id/F3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  F3  \n unkonwn " />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/F4_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  F4  \n unkonwn " />

        <TextView
            android:id="@+id/F5_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  F5  \n unkonwn " />
    </LinearLayout>
"

    <Button
        android:id="@+id/F1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="f1"
        android:text="@string/F1" />

    <Button
        android:id="@+id/F2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/F2" />

    <Button
        android:id="@+id/F3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/F3" />

    <Button
        android:id="@+id/F4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/F4" />

    <Button
        android:id="@+id/F5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/F5" />

</LinearLayout>